logs/inupypi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_HTAuth-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/Flask_Themes-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unipath-1.1.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_htauth'...
Listing './lib/python3.5/site-packages/flaskext'...
Listing './lib/python3.5/site-packages/inupypi'...
Listing './lib/python3.5/site-packages/inupypi/core'...
Compiling './lib/python3.5/site-packages/inupypi/core/bread.py'...
***   File "./lib/python3.5/site-packages/inupypi/core/bread.py", line 59
    print '\n'
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/inupypi/static'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/initializr'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/initializr/css'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/initializr/img'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/initializr/js'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/initializr/js/vendor'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/tablesorter'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/tablesorter/themes'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/tablesorter/themes/blue'...
Listing './lib/python3.5/site-packages/inupypi/static/vendor/tablesorter/themes/green'...
Listing './lib/python3.5/site-packages/inupypi/templates'...
Listing './lib/python3.5/site-packages/inupypi/templates/_themes'...
Listing './lib/python3.5/site-packages/inupypi/templates/_themes/inupypi'...
Listing './lib/python3.5/site-packages/inupypi/views'...
Compiling './lib/python3.5/site-packages/inupypi/views/admin.py'...
***   File "./lib/python3.5/site-packages/inupypi/views/admin.py", line 35
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/inupypi-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/apps'...
Listing './lib/python3.5/site-packages/tests/unit'...
Listing './lib/python3.5/site-packages/unipath'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
